# bot-personal-assistant

./: .env-example  .pre-commit-config.yaml  README.md  pyproject.toml
bot-assistent/: bot.py  config.py  get_env.py  main.py
bot-assistent/config_data/: config.py
bot-assistent/database/: database.py
bot-assistent/databse/: database.py
bot-assistent/filters/: filters.py
bot-assistent/handlers/: other_handlers.py  user_handlers.py
bot-assistent/keyboards/: bookmarks_kb.py  keyboards.py  main_menu.py  pagination_kb.py  set_menu.py
bot-assistent/lexicon/: lexicon.py
bot-assistent/services/: file_handling.py  services.py
requirements/: dev.txt  prod.txt
